@@ -1,3 +1,4 @@
+Neue Option LCD_ST7565_Y_START set eine Startzeile für den ST7565/ST7108/SSD1306/ST7920 Controller
 Unterstützung des 3-line seriell Interfaces für den PCF8814 Controller.
 Unterstützung für Displays mit PCF8812 und PCF8814 Controllern.
 Option LCD_SPI_OPEN_COL für SPI Schnittstelle ohne direktes VCC Signal, nur Pull-Up.
